--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="main.js"></script>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Solicitud de Turno</title>
+
+   <!-- Agrega el enlace al archivo de SweetAlert 2 -->
+   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </head>
+
 <body>
-    
+
+   <div>
+      <h1>Hola, Por favor ingrese su información en los siguientes datos</h1>
+
+      <form id="turnoForm">
+         <label for="nombre">Nombre:</label>
+         <input type="text" id="nombre" name="nombre" required>
+
+         <label for="apellido">Apellido:</label>
+         <input type="text" id="apellido" name="apellido" required>
+
+         <label for="dia">Día(Lunes a viernes):</label>
+         <input type="text" id="dia" name="dia" required>
+
+         <label for="hora">Hora(de 1 a 5):</label>
+         <input type="text" id="hora" name="hora" required>
+
+         <button type="submit">Solicitar Turno</button>
+      </form>
+   </div>
+
+   <ul id="listaTurnos"></ul>
+
+   <script src="main.js"></script>
 </body>
+
 </html>
